# ds_validator

./: README.md  pyproject.toml
.devcontainer/: dev.dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/lifecycle_hooks/: post_create.bash
.devcontainer/scripts/: README.md
.devcontainer/templates/: pyproject.toml
ds_validator/: __init__.py  decorators.py  pydantic_adapters.py  shape_error_finder.py
ds_validator-0.1.0.dist-info/: LICENSE  METADATA  RECORD
ds_validator/exceptions/: __init__.py  import_errors.py  validator_error.py
ds_validator/numpy/: __init__.py  array.py
ds_validator/pandas/: __init__.py  common.py  dataframe.py  series.py
ds_validator/torch/: __init__.py  tensor.py
examples/: pandas_arrow_validator.py  pandas_validator.py  pydantic_test.py
python/examples/: pandas_validator.py
python/pydantic_ext/: __init__.py  function_validator.py  validator_wrappers.py
python/pydantic_ext/exceptions/: pandas.py  validator.py
python/pydantic_ext/pandas_validators/: __init__.py  required_columns.py
python/tests/: test_pandas_column_arrow_validators.py  test_pandas_column_numpy_validators.py  test_pandas_validators.py
src/ds_validator/: __init__.py  decorators.py  pydantic_adapters.py  shape_error_finder.py
src/ds_validator/exceptions/: __init__.py  import_errors.py  validator_error.py
src/ds_validator/numpy/: __init__.py  array.py
src/ds_validator/pandas/: __init__.py  common.py  dataframe.py  series.py
src/ds_validator/torch/: __init__.py  tensor.py
tests/: test_import_errors.py  test_numpy_array_validator.py  test_pandas_df_dtype_arrow_validator.py  test_pandas_df_dtype_numpy_validator.py  test_pandas_df_series_validator.py  test_pandas_series_validator.py  test_pydantic_adapters.py  test_torch_validator.py
